<resources>
    <string name="app_name">GreenList</string>

    <!--Fonts-->
    <string name="font_default">fonts/open_sansc_medium.ttf</string>

    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_regular">sans-serif-regular</string>
    <string name="font_family_medium">sans-serif-medium</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="pin_path_1">M412.7,238.9C381,238.9 356.8,261.8 356.8,294.6C356.8,329.7 407.7,408.7 409.2,408.8C410.7,408.9 469.4,328.1 469.4,294.6C469.4,261.8 444.5,238.9 412.7,238.9ZM412.7,324.3C397.2,324.3 384.7,311.3 384.7,295.3C384.7,279.3 397.2,266.3 412.7,266.3C428.2,266.3 440.8,279.3 440.8,295.3C440.8,311.3 428.2,324.3 412.7,324.3Z</string>
    <string name="pin_path_5">M406.7,247.6C374.9,247.6 350.4,270.5 350.4,303.4C350.4,335.9 406.9,400.5 406.1,408.7C416,408.7 463.4,339.3 463.4,303.4C463.4,270.5 438.4,247.6 406.7,247.6ZM406.7,329.7C391.2,329.7 378.6,317.5 378.6,302.4C378.6,287.2 391.2,275 406.7,275C422.2,275 434.8,287.2 434.8,302.4C434.8,317.5 422.2,329.7 406.7,329.7Z</string>
    <string name="pin_path_9">M414.2,238.1C382.4,238.1 357.9,261 357.9,293.8C357.9,326.3 402.5,408.3 403.9,408.3C405.3,408.3 471.4,330.5 471.4,293.8C471.4,261 445.9,238.1 414.2,238.1ZM414.2,323.8C398.7,323.8 386.1,310.7 386.1,294.6C386.1,278.5 398.7,265.4 414.2,265.4C429.7,265.4 442.3,278.5 442.3,294.6C442.3,310.7 429.7,323.8 414.2,323.8Z</string>
    <string name="pin_path_13">M411.5,270.7C375.4,270.7 354.7,289.4 354.7,322.3C354.7,341 392.2,409.6 402.3,409.6C415.5,409.6 468.3,350.4 468.3,322.3C468.3,289.4 439.4,270.7 411.5,270.7ZM411.5,345.4C396,345.4 382.2,333.7 382.2,320C382.2,306.4 393.6,294 411.5,295.9C428.7,297.7 440.3,308 440.3,321.7C440.3,335.3 429.6,345.4 411.5,345.4Z</string>
    <string name="pin_path_19">M452.8,211C418,208.7 398,240.4 398,253.2C398,298.3 401.3,343.7 384.1,360.4C465,355.9 508.3,297.4 508.3,269.2C508.3,230.3 477.4,212.7 452.8,211ZM452.5,297C431.6,297 423.8,275.7 423.8,262C423.8,248.4 439.3,236.3 452.8,236.3C466.2,236.3 481.6,248.4 481.6,262C481.6,275.7 473.4,297 452.5,297Z</string>

    <string name="arrowoverflow_path_dot">M 0,-2 l 0,0 c 1.1045694996,0 2,0.8954305004 2,2 l 0,0 c 0,1.1045694996 -0.8954305004,2 -2,2 l 0,0 c -1.1045694996,0 -2,-0.8954305004 -2,-2 l 0,0 c 0,-1.1045694996 0.8954305004,-2 2,-2 Z</string>
    <string name="rounded_square">M40.2 20h120s20-1 20 20-19.7 19.6-19.7 19.6H40.3s-19.8-.5-19.8-20C20.5 20 40.2 20 40.2 20z</string>
    <string name="airbnb">M238 223c-2 14.5-11.5 27-25 32.4-6.7 2.8-13.8 3.6-21 2.8-7-1-13.8-3-21-7.2-10-5.5-19.8-14-31.4-26.8 18.2-22.3 29.2-42.7 33.4-61 2-8.5 2.2-16.2 1.3-23.4-1-7-3.6-13.2-7.4-18.7-9-12-23-19-39-19s-31 7-39 19c-4 6-7 12-8 19s-1 15 1 24c4 18 15 39 33 61-11 13-21 21-31 27-7 4-14 7-21 7-8 1-15 0-21-2-14-5-23-18-25-32-1-7-1-14 2-21l3-9 6.7-14 .3-.4c19-41 39.7-83 61-124l1-1.4c2.4-4 4.7-8.4 7-12.6 2-5 4.5-9 7.6-12 6-7 13.6-10.8 22-10.8 8.7 0 16.4 3.7 22 10.3 3 3.4 5.7 7.5 8 12s4.5 8 7 12l.6 1.6c21 41 41.3 83 60.3 124v.5c2.3 4 4 9 6.4 13.5 1.4 3.5 3 6 3.6 9 3 7 3 14 2 21zm-110-12.8c-15-18.8-24.6-36.4-28-51.3-1.2-7-1.5-12-.7-17 .6-5 2.2-9 4.4-12 5.3-8 14-12 24.3-12 10.2 0 19.3 4 24.3 12 2.2 3 3.8 7 4.4 11 .8 5 .5 10-.8 17-4 14-13 32-28 51zm124.4-14.4c-1.4-3.3-2.8-7-4.2-10l-6.3-14-1-.2c-19-41.4-40-83.3-61-124.6l-1-2c-3-4-5-9-7-13-3-5-6-10-10-15-8-11-21-17-34-17s-26 6-35 16c-4 5-7 10.2-10 15-2 4.5-5 9-7 13l-1 1.7C54 87 33 129 14 170.4v.5l-6 14-4 10c-3.8 10-5 20-3.5 30 3 20 16.8 38 35.8 45 7.4 3.6 14.7 5 22.7 5 2 0 5 0 7-.6 9-1 18-4 27-10 11-7 22-16 34-29 12 13 23 22 34 28 9 5.2 18 8.3 27 9.4l7 .3c7.7 0 15.4-1.3 22.3-4.4 19.2-8 32.7-26 36-46 2-10 1-20-2.7-30z</string>

    <!--Home Screen-->
    <string name="what_to_search">What do you want to search  ?</string>
    <string name="location_name">Near %1$s</string>

    <!--Search Screen-->
    <string name="search_result_count">%1$d Search results found</string>
    <string name="search_location_hint">near</string>

    <!--Preferences-->
    <string name="preference_file_key">APP_DATA</string>

    <!--Social Data-->
    <string name="social_facebook">https://www.facebook.com/amalgta</string>
    <string name="social_youtube">http://youtube.com/amalgta</string>
    <string name="social_github">http://github.com/amalgta</string>
    <string name="social_twitter">http://twitter.com/amalgta</string>

    <!--About Screen-->
    <string name="copyright">Copyright</string>
    <string name="copyright_summary" translatable="false">2016, Amal Thomas</string>
    <string name="beta_program_summary">Become a beta tester</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="follow_me_on_twitter">Follow me on Twitter</string>
    <string name="follow_me_on_youtube">Follow my channel on YouTube</string>
    <string name="follow_me_on_github">Follow me on GitHub</string>
    <string name="follow_me_on_facebook">Follow me on Facebook</string>
    <string name="settings">Settings</string>
    <string name="five_stars">5 stars</string>
    <string name="about">About</string>
    <string name="like_page">Like Page</string>
    <string name="version">Version</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="facebook">Facebook</string>
    <string name="official_website">Official website</string>
    <string name="youtube">YouTube</string>
    <string name="github">GitHub</string>
    <string name="feedback">Feedback</string>
    <string name="social">Social</string>
    <string name="help">Help</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="preferences">Preferences</string>
    <string name="changelog">Changelog</string>
    <string name="google_community">Google+ community</string>
    <string name="beta_program">Beta program</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="developed_by">Developed by</string>
    <string name="follow_us">Follow us</string>
    <string name="legal">Legal</string>
    <string name="support">Support</string>
    <string name="twitter">Twitter</string>
    <string name="date_of_birth">Date of Birth</string>
</resources>