<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/linearLayoutListingParent"
    android:background="?selectableItemBackground"
    android:clickable="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="8dp">

        <RelativeLayout
            android:id="@+id/full_header_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp">

            <RelativeLayout
                android:id="@+id/relativeLayoutCircle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:paddingLeft="0dp"
                android:paddingTop="4dp">

                <View
                    android:layout_width="1dp"
                    android:layout_height="96dp"
                    android:layout_centerHorizontal="true"
                    android:background="@color/grey_300" />

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:background="@drawable/shape_circle_ex_red" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/relativeLayoutHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/relativeLayoutCircle"
                android:paddingBottom="8dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp">

                <RelativeLayout
                    android:id="@+id/header_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textViewListingName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@string/font_family_medium"
                        android:text="RCC (Medical College)"
                        android:textColor="@color/app_dark_100"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/textViewLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textViewListingName"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="0dp"
                        android:fontFamily="@string/font_family_regular"
                        android:text="Ulloor Road, Trivandrum • 3 kms"
                        android:textColor="@color/medium_green_800"
                        android:textSize="12sp" />


                    <TextView
                        android:id="@+id/tv_throw_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/linearLayoutLocation"
                        android:fontFamily="@string/font_family_light"
                        android:text="Free WiFi, Free Cancellation, Pay at Hotel"
                        android:textColor="@color/app_dark_100"
                        android:textSize="12sp"
                        android:visibility="gone" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/textViewListingName"
                        android:layout_marginTop="0dp"
                        android:background="@drawable/shape_bg_discount"
                        android:fontFamily="@string/font_family_medium"
                        android:paddingBottom="4dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingTop="4dp"
                        android:text="15% OFF"
                        android:textColor="@color/white"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                </RelativeLayout>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewImageList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayoutHeader"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true" />

            <TextView
                android:id="@+id/buttonCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/recyclerViewImageList"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_btn_hollow_black"
                android:elevation="2dp"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="8dp"
                android:text="Call Now"
                android:textColor="@color/app_dark_100"
                android:textSize="12sp" />
        </RelativeLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@color/grey_300" />

</LinearLayout><!--</android.support.v7.widget.CardView>-->