<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <eu.fiskur.simpleviewpager.SimpleViewPager xmlns:simpleviewpager="http://schemas.android.com/apk/res-auto"
            android:id="@+id/iv_hero_image"
            android:layout_width="match_parent"
            android:layout_height="236dp"
            android:clickable="true"
            android:elevation="8dp"
            android:foreground="@drawable/shape_ripple_image"
            app:layout_collapseMode="parallax"
            simpleviewpager:scaleType="CENTER_CROP" />

        <RelativeLayout
            android:id="@+id/relativeLayoutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_hero_image"
            android:padding="12dp">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/linearLayoutPriceRange"
                android:fontFamily="@string/font_family_medium"
                android:textAllCaps="true"
                android:textColor="@color/app_dark_200"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="New Delhi" />

            <TextView
                android:id="@+id/textViewType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewTitle"
                android:fontFamily="@string/font_family_regular"
                android:textColor="#BCBDBC"
                android:textSize="14sp"
                tools:text="1200 hotels in this city" />

            <LinearLayout
                android:id="@+id/linearLayoutPriceRange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true">

                <TextView
                    android:id="@+id/textViewMinPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/font_family_medium"
                    android:hint="2000"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/editTextMaxPrice"
                    android:textAlignment="center"
                    android:textColor="@color/medium_green_900"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="6dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="6dp"
                    android:background="@color/medium_green_900" />

                <TextView
                    android:id="@+id/textViewMaxPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/font_family_medium"
                    android:hint="3000"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/editTextContactNumber"
                    android:textAlignment="center"
                    android:textColor="@color/medium_green_900"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayoutTitle"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/linearLayoutContactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/textViewQuestion"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".3"
                    android:fontFamily="@string/font_family_light"
                    android:gravity="center_vertical"
                    android:padding="2dp"
                    android:text="Contact"
                    android:textColor="@color/app_dark_100"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textViewContactNumber"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".7"
                    android:fontFamily="@string/font_family_light"
                    android:maxLines="1"
                    android:textColor="@color/app_dark_100"
                    android:textSize="14sp" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewDataList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/linearLayoutLocationName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/textViewLocation"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".3"
                    android:fontFamily="@string/font_family_light"
                    android:gravity="center_vertical"
                    android:padding="2dp"
                    android:text="Location"
                    android:textColor="@color/app_dark_100"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textViewLocationName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".7"
                    android:fontFamily="@string/font_family_light"
                    android:maxLines="1"
                    android:textColor="@color/app_dark_100"
                    android:textSize="14sp" />
            </LinearLayout>

            <fragment
                android:id="@+id/fragmentMapView"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>