<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="16dp">

        <RelativeLayout
            android:id="@+id/relativeLayoutCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:paddingLeft="0dp"
            android:paddingTop="4dp">

            <View
                android:layout_width="1dp"
                android:layout_height="96dp"
                android:layout_centerHorizontal="true"
                android:background="@color/grey_300" />

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:background="@drawable/shape_circle_ex_red" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/relativeLayoutCircle">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_family_medium"
                android:hint="Enter Name"
                android:inputType="textCapWords"
                android:maxLines="2"
                android:textColor="@color/app_dark_100"
                android:textSize="20sp"
                android:textStyle="normal" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayoutLocation"
                android:layout_marginTop="8dp">

                <Spinner
                    android:id="@+id/spinnerType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/linearLayoutPriceRange"
                    android:isScrollContainer="true"
                    android:spinnerMode="dialog" />

                <LinearLayout
                    android:id="@+id/linearLayoutPriceRange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true">

                    <EditText
                        android:id="@+id/editTextMinPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@string/font_family_medium"
                        android:hint="2000"
                        android:inputType="number"
                        android:maxLines="1"
                        android:nextFocusDown="@+id/editTextMaxPrice"
                        android:textAlignment="center"
                        android:textColor="@color/medium_green_900"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="6dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="6dp"
                        android:background="@color/medium_green_900" />

                    <EditText
                        android:id="@+id/editTextMaxPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@string/font_family_medium"
                        android:hint="3000"
                        android:inputType="number"
                        android:maxLines="1"
                        android:nextFocusDown="@+id/editTextContactNumber"
                        android:textAlignment="center"
                        android:textColor="@color/medium_green_900"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/linearLayoutLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/editTextName"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/textViewLocationName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@string/font_family_regular"
                    android:text="Set Location"
                    android:textColor="@color/medium_green_800"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/imageViewLocationButton"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="4dp"
                    android:padding="2dp"
                    android:src="@drawable/ic_ta" />
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/linearLayoutContactNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayoutHeader"
            android:weightSum="1">

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/textViewQuestion"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".3"
                android:fontFamily="@string/font_family_light"
                android:gravity="center_vertical"
                android:padding="2dp"
                android:text="Contact"
                android:textColor="@color/app_dark_100"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/editTextContactNumber"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".7"
                android:digits="0123456789+"
                android:fontFamily="@string/font_family_light"
                android:hint="Number"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:maxLines="1"
                android:textColor="@color/app_dark_100"
                android:textSize="12sp" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewImageList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayoutContactNumber"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewQuestionnaire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recyclerViewImageList"
            android:layout_marginTop="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/recyclerViewQuestionnaire"
            android:gravity="center_vertical"
            android:padding="2dp">

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="0.2" />

            <TextView
                android:id="@+id/textViewSaveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="0.05"
                android:background="@drawable/shape_btn_hollow_black"
                android:clickable="true"
                android:elevation="2dp"
                android:foreground="?selectableItemBackground"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:text="Save"
                android:textColor="@color/app_dark_100"
                android:textSize="12sp" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>
